--- a/src/pages/MainPage/style.scss
+++ b/src/pages/MainPage/style.scss
@@ -41,7 +41,7 @@
     }
 
     .our-photos {
-        max-width: 1204px;
+        max-width: 1208px;
         margin: auto;
         margin-bottom: 40px;
         display: flex;
@@ -90,6 +90,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        height: 1385px;
 
         font-size: 20px;
         font-weight: 400;
@@ -98,8 +99,13 @@
 
         .serpentine {
             display: flex;
-            max-width: 1204px;
-            margin-bottom: 82px;
+            max-width: 1208px;
+            margin-bottom: 102px;
+            flex-wrap: wrap;
+
+            .elegance {
+                max-width: 588px;
+            }
 
             .snake {
                 position: relative;
@@ -111,6 +117,47 @@
                 position: absolute;
                 left: 215px;
                 top: 110px;
+            }
+        }
+
+        .text {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+            margin-bottom: 41px;
+
+            span {
+                font-size: 24px;
+                font-weight: 500;
+                line-height: 29px;
+                margin: 0 20px;
+                color: #000000;
+            }
+
+            .line {
+                width: 272px;
+                border: 1px solid #281b14;
+            }
+        }
+
+        .gallery {
+            max-width: 1208px;
+            display: flex;
+            flex-wrap: wrap;
+
+            .right {
+                margin-left: 33px;
+
+                .elegance {
+                    max-width: 758px;
+                }
+
+                .photos {
+                    display: flex;
+                    gap: 12px;
+                }
             }
         }
     }
