--- a/src/pages/ProductsPage/style.scss
+++ b/src/pages/ProductsPage/style.scss
@@ -1,10 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Istok+Web:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
 
 .products-page{
     margin-top: 79px;
 
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+
+    .name{
+        font-weight: 700;
+        color: #009F96;
+    }
+
     h1 {
         margin-bottom: 32px;
+        margin-top: 0;
 
         font-family: 'Istok Web', sans-serif;
         font-size: 32px;
@@ -12,5 +24,22 @@
         line-height: 46px;
         text-align: center;
 
+    }
+
+
+    .filters{
+        width: 100%;
+        height: 45px;
+        background-color: #F5F5F5;
+        display: flex;
+        justify-content: center;
+        gap: 115px;
+        align-items: center;
+        margin-bottom: 64px;
+
+        .fil{
+            margin-right: 20px;
+            color: #707070;
+        }
     }
 }
