--- a/src/components/Swiper/style.scss
+++ b/src/components/Swiper/style.scss
@@ -13,6 +13,7 @@
         box-sizing: border-box;
         width: 409px;
         height: 641px;
+        border: 1px solid black;
     }
 
     button {
