--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -52,9 +52,8 @@
         }
 
         .icons {
-            display: flex;
-            gap: 18px;
             height: 20px;
+            margin-right: 50px;
 
             img {
                 width: 20px;
@@ -62,6 +61,7 @@
 
                 &:hover {
                     cursor: pointer;
+                    fill: #009f96;
                 }
             }
         }
