--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -55,13 +55,14 @@
             height: 20px;
             margin-right: 50px;
 
-            img {
+            .colored-svg {
                 width: 20px;
                 height: 20px;
+                transition: all 0.3s linear;
 
                 &:hover {
                     cursor: pointer;
-                    fill: #009f96;
+                    color: #009f96;
                 }
             }
         }
