--- a/src/pages/ProductsPage/style.scss
+++ b/src/pages/ProductsPage/style.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Istok+Web:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap');
 
-.products-page{
+.products-page {
     margin-top: 79px;
 
     font-family: 'Montserrat', sans-serif;
@@ -9,9 +9,9 @@
     font-weight: 500;
     line-height: 24px;
 
-    .name{
+    .name {
         font-weight: 700;
-        color: #009F96;
+        color: #009f96;
     }
 
     h1 {
@@ -23,23 +23,34 @@
         font-weight: 400;
         line-height: 46px;
         text-align: center;
-
     }
 
-
-    .filters{
+    .filters {
         width: 100%;
         height: 45px;
-        background-color: #F5F5F5;
+        background-color: #f5f5f5;
         display: flex;
         justify-content: center;
-        gap: 115px;
+        gap: 25px;
         align-items: center;
         margin-bottom: 64px;
 
-        .fil{
+        .fil {
             margin-right: 20px;
             color: #707070;
+        }
+    }
+
+    .container {
+        min-height: 100px;
+        max-width: 1200px;
+        margin: 0 auto 58px;
+
+        .wrapper {
+            display: grid;
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+            column-gap: 42px;
+            row-gap: 24px;
         }
     }
 }
