--- a/src/components/Footer/style.scss
+++ b/src/components/Footer/style.scss
@@ -51,7 +51,7 @@
                 width: 256px;
                 height: 31px;
                 border: 1px solid #000000;
-
+                padding-left: 9px;
                 font-weight: 500;
                 color: rgba(12, 1, 1, 0.53);
             }
