--- a/src/components/MyButton/style.scss
+++ b/src/components/MyButton/style.scss
@@ -23,6 +23,11 @@
         opacity: 50%;
         cursor: pointer;
     }
+
+    &:disabled {
+        opacity: 50%;
+        cursor: not-allowed;
+    }
 }
 
 .myButton-primary {
